[package]
name = "store-visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.83"
wgpu = { version = "0.13", features = ["webgl"]}
winit = "0.27.3"
pollster = "0.2.5"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'Window',
]
